--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@
   height: 64px;
   position: relative;
   background-image: linear-gradient(#fff 16px, transparent 0),
-    linear-gradient(#ff3d00 16px, transparent 0),
-    linear-gradient(#ff3d00 16px, transparent 0),
+    linear-gradient(rgb(99 102 241) 16px, transparent 0),
+    linear-gradient(rgb(99 102 241) 16px, transparent 0),
     linear-gradient(#fff 16px, transparent 0);
   background-repeat: no-repeat;
   background-size: 16px 16px;
